test/scc/expr/semantic-errors/033.t
void test()
{
    struct A {int x;} a;
    (int)a;
}